--- a/2bb80d537b1da3e38bd30361aa855686bde0eacd7162fef6a25fe97bf527a25b/index.html
+++ b/2bb80d537b1da3e38bd30361aa855686bde0eacd7162fef6a25fe97bf527a25b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <script>
+      history.replaceState({}, null, "/");
+  </script>
 <i>“All things being equal, the simplest solution tends to be the best one."</i>
 <br><br>
 William of Ockham
+
 </html>
