--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
+	<style>
+		body {
+			background: rgb(65, 65, 65);
+			color: white;
+		}
+		h1 {
+			line-height: 0.1;
+		}
+	</style>
 
 	<body style="margin:0">
 
 		<div style="display:flex;justify-content: center;align-items: center;height: 100vh;">
 			<div>
+				<h1> Password Protection for Static Pages </h1>
+				<p> *we need a name for this</p>
 				<form id="form">
-					<input style="padding: 0.3rem;border: solid;" id="password" type="password" placeholder="password"/>
+					<input style="padding: 0.3rem;border: solid;" id="password" type="password" placeholder="Password"/>
 					<input style="padding: 0.3rem;border: solid;background: white;" type="submit" value="Submit">
 				</form>
 			</div>
